--- a/Callender/Server.csproj
+++ b/Callender/Server.csproj
@@ -58,14 +58,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs" />
+    <Compile Include="IO\Command.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="HandleClient.cs" />
     <Compile Include="INIFiles\INIFiles.cs" />
     <Compile Include="INIFiles\Section.cs" />
     <Compile Include="INIFiles\Variable.cs" />
+    <Compile Include="IO\Command\Parametr.cs" />
+    <Compile Include="IO\Command\Parser.cs" />
+    <Compile Include="IO\Command\Token.cs" />
+    <Compile Include="IO\Command\Tokenizer.cs" />
     <Compile Include="IO\Input.cs" />
     <Compile Include="IO\IO.cs" />
     <Compile Include="IO\Output.cs" />
+    <Compile Include="IO\Text.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
