--- a/Callender/Server.csproj
+++ b/Callender/Server.csproj
@@ -72,6 +72,7 @@
     <Compile Include="IO\IO.cs" />
     <Compile Include="IO\Output.cs" />
     <Compile Include="IO\Text.cs" />
+    <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
