--- a/Callender/Server.csproj
+++ b/Callender/Server.csproj
@@ -58,21 +58,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IO\Command.cs" />
+    <Compile Include="Command\Command.cs" />
+    <Compile Include="Command\Commands\Clear.cs" />
+    <Compile Include="Command\Commands\Echo.cs" />
+    <Compile Include="Command\Commands\Help.cs" />
+    <Compile Include="Command\Exceptions\BadArgumentTypeException.cs" />
+    <Compile Include="Command\Exceptions\TooMuchArgumentsExceptioncs.cs" />
+    <Compile Include="Command\Exceptions\UnknownCommandException.cs" />
+    <Compile Include="Command\Parametr.cs" />
+    <Compile Include="Command\ICommand.cs" />
+    <Compile Include="Command\Parser.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="HandleClient.cs" />
     <Compile Include="INIFiles\INIFiles.cs" />
     <Compile Include="INIFiles\Section.cs" />
     <Compile Include="INIFiles\Variable.cs" />
-    <Compile Include="IO\Command\Parametr.cs" />
-    <Compile Include="IO\Command\Parser.cs" />
-    <Compile Include="IO\Command\Token.cs" />
-    <Compile Include="IO\Command\Tokenizer.cs" />
     <Compile Include="IO\Input.cs" />
     <Compile Include="IO\IO.cs" />
     <Compile Include="IO\Output.cs" />
     <Compile Include="IO\Text.cs" />
     <Compile Include="Packet.cs" />
+    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\Token.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
