--- a/Callender/Server.csproj
+++ b/Callender/Server.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Command\Commands\Clear.cs" />
     <Compile Include="Command\Commands\Echo.cs" />
     <Compile Include="Command\Commands\Help.cs" />
+    <Compile Include="Command\Commands\Stop.cs" />
     <Compile Include="Command\Exceptions\BadArgumentTypeException.cs" />
     <Compile Include="Command\Exceptions\TooMuchArgumentsExceptioncs.cs" />
     <Compile Include="Command\Exceptions\UnknownCommandException.cs" />
