--- a/Callender/Server.csproj
+++ b/Callender/Server.csproj
@@ -73,14 +73,10 @@
     <Compile Include="Command\Parser.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="HandleClient.cs" />
-    <Compile Include="INIFiles\INIFiles.cs" />
-    <Compile Include="INIFiles\Section.cs" />
-    <Compile Include="INIFiles\Variable.cs" />
     <Compile Include="IO\Input.cs" />
     <Compile Include="IO\IO.cs" />
     <Compile Include="IO\Output.cs" />
     <Compile Include="IO\Text.cs" />
-    <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -112,7 +108,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Callender-Core\Callender-Core.csproj">
+      <Project>{a8f5e380-6ef8-4d5c-b733-28be8b423dc8}</Project>
+      <Name>Callender-Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
