--- a/Callender-Core/Callender-Core.csproj
+++ b/Callender-Core/Callender-Core.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A8F5E380-6EF8-4D5C-B733-28BE8B423DC8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Callender_Core</RootNamespace>
+    <RootNamespace>Core</RootNamespace>
     <AssemblyName>Callender-Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -44,7 +44,11 @@
     <Compile Include="INIFiles\Section.cs" />
     <Compile Include="INIFiles\Variable.cs" />
     <Compile Include="Packet.cs" />
+    <Compile Include="Parser\IParser.cs" />
+    <Compile Include="Parser\IToken.cs" />
+    <Compile Include="Parser\ITokenizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
